# telegram-marckbot2bot

./: .gitignore  Dockerfile  README.md  assign.py  bot.py  morejpeg.py  pyproject.toml  requirements-prod.txt  requirements.txt  setup.py
.github/workflows/: build-image.yml
manifests/: bot.yaml
marckbot2bot/: assign.py  attrdict.py  bot.py  db.py  morejpeg.py
